--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,12 @@
 {
   "hosting": {
     "public": "dist",
-    "rewrites": [{
-      "source": "**",
-      "destination": "/index.html"
-    }],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
