--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
     "firebase": "^9.15.0",
+    "pdfkit": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "react-scroll-motion": "^0.3.2"
   },
   "devDependencies": {
+    "@types/pdfkit": "^0.12.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-pdf": "^6.2.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
