--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@react-pdf/renderer": "^3.1.1",
     "firebase": "^9.15.0",
     "pdfkit": "^0.13.0",
     "react": "^18.2.0",
